# bazel-tools

./: .gitignore  BUILD  BUILD.bazel  MODULE.bazel  go.mod
buildozer/: README.md  def.bzl
buildozer/docs/: BUILD.bazel
file_hash/: BUILD.bazel  README.md  def.bzl
goimports/: BUILD  README.md  def.bzl
golangcilint/: BUILD  README.md  def.bzl  deps.bzl  runner.bash.template
gometalinter/: BUILD  README.md  def.bzl  deps.bzl  runner.bash.template
gorevive/: BUILD  README.md  deps.bzl  revive.BUILD.bazel
gorevive/example/: BUILD.bazel  WORKSPACE
gorevive/example/src/: BUILD.bazel
rjsone/: BUILD  README.md
