load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "mod/file_hash",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "file_hash",
    embed = [":go_default_library"],
    msan = "off",
    pure = "on",
    race = "off",
    static = "off",
    visibility = ["//visibility:public"],
)
